# universal-robot

./: .gitignore  .mega-linter.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS  dependabot.yaml  pull_request-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: continuous_build.yaml  continuous_testing.yaml  mega-linter.yaml
examples/: demo.rs
examples/simulator/: Dockerfile  README.md  docker-compose.yaml
examples/simulator/programs/: default.installation  default.variables  rtde_control_loop.script  rtde_control_loop.urp  rtde_control_loop_copy.script  rtde_control_loop_copy.txt  rtde_control_loop_copy.urp
src/: dashboard.rs  lib.rs  physical.rs  rolling_buffer.rs  rtde.rs  test.rs
src/dashboard/: commands.rs  helpers.rs  query.rs  safety.rs  test.rs  types.rs
src/rtde/: commands.rs  data.rs  test.rs  types.rs
