[package]
name = "universal-robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.1"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_repr = "0.1.19"
thiserror = "2.0.9"

[dev-dependencies]
simple_logger = "5.0.0"
